// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<EmptyState /> spec renders the component with channels configured 1`] = `
<div
  class="euiEmptyPrompt"
>
  <span
    class="euiTextColor euiTextColor--subdued"
  >
    <h2
      class="euiTitle euiTitle--medium"
    >
      No notifications insights to display
    </h2>
    <div
      class="euiSpacer euiSpacer--m"
    />
    <div
      class="euiText euiText--medium"
    >
      <div
        class="euiText euiText--medium"
      >
        Adjust your filter or create a channel.
         
        <a
          class="euiLink euiLink--primary"
          href=""
          rel="noopener noreferrer"
          target="_blank"
        >
          Learn more
          <svg
            aria-hidden="true"
            aria-label="External link"
            class="euiIcon euiIcon--small euiIcon-isLoading euiLink__externalIcon"
            focusable="false"
            height="16"
            role="img"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          />
        </a>
      </div>
    </div>
  </span>
</div>
`;

exports[`<EmptyState /> spec renders the component without channels configured 1`] = `
<div
  class="euiEmptyPrompt"
>
  <span
    class="euiTextColor euiTextColor--subdued"
  >
    <h2
      class="euiTitle euiTitle--medium"
    >
      You have no channels set up
    </h2>
    <div
      class="euiSpacer euiSpacer--m"
    />
    <div
      class="euiText euiText--medium"
    >
      <div
        class="euiText euiText--medium"
      >
        <div>
          Create a channel, and then configure actions to get notifications from features like Alerting and Index Management.
           
          <a
            class="euiLink euiLink--primary"
            href=""
            rel="noopener noreferrer"
            target="_blank"
          >
            Learn more
            <svg
              aria-label="External link"
              class="euiIcon euiIcon--small euiLink__externalIcon"
              focusable="false"
              height="16"
              role="img"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M13 8.5a.5.5 0 111 0V12a2 2 0 01-2 2H4a2 2 0 01-2-2V4a2 2 0 012-2h3.5a.5.5 0 010 1H4a1 1 0 00-1 1v8a1 1 0 001 1h8a1 1 0 001-1V8.5zm-5.12.339a.5.5 0 11-.706-.707L13.305 2H10.5a.5.5 0 110-1H14a1 1 0 011 1v3.5a.5.5 0 11-1 0V2.72L7.88 8.838z"
              />
            </svg>
          </a>
        </div>
      </div>
    </div>
  </span>
  <div
    class="euiSpacer euiSpacer--l"
  />
  <div
    class="euiSpacer euiSpacer--s"
  />
  <a
    class="euiButton euiButton--primary euiButton--fill"
    href="#/create-channel"
    rel="noreferrer"
  >
    <span
      class="euiButtonContent euiButton__content"
    >
      <span
        class="euiButton__text"
      >
        Create channel
      </span>
    </span>
  </a>
</div>
`;
